--- a/readme
+++ b/readme
@@ -1,4 +1,5 @@
-This is a description of the foldars contained in this repository
-S01-Fitness
-S01-DHFR-PCA
-S03-Attenuation
+AscencioETAL2020
+All scripts generated for the analyses related to "Protein attenuation as a mechanism of robustness to gene duplication in protein complexes".
+Scripts for the analyses of the Competitive Fitness assays were performed in MatLab, and R.
+While for DHFR-PCA PPIs and flow cytometry data for attenuation experiments were done with custom R scripts. 
+All data related to these scripts are available with the article.  
